// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiatExchangeAmount cashIn renders correctly with EUR as app currency 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingHorizontal": 16,
      }
    }
    keyboardShouldPersistTaps="always"
    testID="KeyboardAwareScrollView"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginBottom": 8,
            "marginTop": 24,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "fontFamily": "RedHatDisplayMedium",
                "fontSize": 12,
                "lineHeight": 24,
              }
            }
          >
            amount
          </Text>
        </View>
        <TextInput
          autoFocus={true}
          keyboardType="decimal-pad"
          multiline={false}
          onChangeText={[Function]}
          placeholder="€0"
          placeholderTextColor="#757575"
          style={
            [
              {
                "flex": 1,
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 19,
                "lineHeight": 27,
                "marginLeft": 10,
                "minHeight": 48,
                "textAlign": "right",
              },
              {
                "color": "#2F4ACD",
              },
            ]
          }
          testID="FiatExchangeInput"
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    distance={8}
    offset={
      [
        0,
        4,
      ]
    }
    startColor="rgba(190, 201, 255, 0.28)"
    style={
      {
        "alignSelf": "stretch",
        "borderRadius": 15,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "column",
            "width": "100%",
          },
          {
            "padding": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#2F4ACD",
                "flexDirection": "row",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "maxHeight": 56,
                "opacity": 0.25,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
                "width": "100%",
              },
              undefined,
            ]
          }
          testID="FiatExchangeNextButton"
        >
          <View
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <BVLinearGradient
              borderRadii={
                [
                  0,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0,
                ]
              }
              colors={
                [
                  -13677875,
                  -15194777,
                ]
              }
              endPoint={
                [
                  1,
                  0,
                ]
              }
              locations={null}
              startPoint={
                [
                  0,
                  0,
                ]
              }
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
          <Text
            accessibilityLabel="next"
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "fontWeight": "normal",
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            next
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`FiatExchangeAmount cashIn renders correctly with USD as app currency 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingHorizontal": 16,
      }
    }
    keyboardShouldPersistTaps="always"
    testID="KeyboardAwareScrollView"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginBottom": 8,
            "marginTop": 24,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "fontFamily": "RedHatDisplayMedium",
                "fontSize": 12,
                "lineHeight": 24,
              }
            }
          >
            amount
          </Text>
        </View>
        <TextInput
          autoFocus={true}
          keyboardType="decimal-pad"
          multiline={false}
          onChangeText={[Function]}
          placeholder="$0"
          placeholderTextColor="#757575"
          style={
            [
              {
                "flex": 1,
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 19,
                "lineHeight": 27,
                "marginLeft": 10,
                "minHeight": 48,
                "textAlign": "right",
              },
              {
                "color": "#2F4ACD",
              },
            ]
          }
          testID="FiatExchangeInput"
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    distance={8}
    offset={
      [
        0,
        4,
      ]
    }
    startColor="rgba(190, 201, 255, 0.28)"
    style={
      {
        "alignSelf": "stretch",
        "borderRadius": 15,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "column",
            "width": "100%",
          },
          {
            "padding": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#2F4ACD",
                "flexDirection": "row",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "maxHeight": 56,
                "opacity": 0.25,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
                "width": "100%",
              },
              undefined,
            ]
          }
          testID="FiatExchangeNextButton"
        >
          <View
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <BVLinearGradient
              borderRadii={
                [
                  0,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0,
                ]
              }
              colors={
                [
                  -13677875,
                  -15194777,
                ]
              }
              endPoint={
                [
                  1,
                  0,
                ]
              }
              locations={null}
              startPoint={
                [
                  0,
                  0,
                ]
              }
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
          <Text
            accessibilityLabel="next"
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "fontWeight": "normal",
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            next
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;
